[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Menus/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/BOTAO_CONT_BRANCO.png" type="Texture" id=2]
[ext_resource path="res://Assets/BOTAO_MENU_ROSA.png" type="Texture" id=3]
[ext_resource path="res://Assets/BOTAO_MENU_BRANCO.png" type="Texture" id=4]
[ext_resource path="res://Assets/BOTAO_CONT_ROSA2.png" type="Texture" id=5]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.227451 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.5
margin_top = -113.5
margin_right = 165.5
margin_bottom = 71.5
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 139.0
margin_top = 75.0
margin_right = 192.0
margin_bottom = 109.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 53.0
margin_bottom = 14.0
text = "Pausado"
align = 1
valign = 1

[node name="Control" type="Control" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 53.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 10 )

[node name="ContinueButton" type="TextureButton" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 583.0
margin_top = 307.0
margin_right = -583.0
margin_bottom = -313.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
expand = true

[node name="QuitButton" type="TextureButton" parent="ColorRect"]
margin_left = 582.0
margin_top = 344.0
margin_right = 686.0
margin_bottom = 374.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[connection signal="pressed" from="ColorRect/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ColorRect/QuitButton" to="." method="_on_QuitButton_pressed"]
